Bugfix: addition of z-index: 1 to navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ body {
 /* Navigation */
 
 .navbar {
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.4);
     border: 0;
     height: 60px;
     justify-content: space-between;
@@ -48,6 +48,7 @@ body {
     padding-right: 10px;
     word-spacing: 4px;
     width: 100%;
+    z-index: 1;
 }
 
 .navbar-brand img {
@@ -73,8 +74,16 @@ body {
     color: #f2f2f2;
 }
 
-.nav-link-light:hover,
-.nav-link-dark:hover {
+.navbar-light .navbar-nav .nav-link {
+    color: #f2f2f2;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #693288;
+}
+
+.navbar-light .nav-link-light a :hover,
+.navbar-light .nav-link-dark a:hover {
     /* Taken from the CI Resume Walkthrough */
     background-color: #693288;
     color: #f2f2f2;
@@ -101,15 +110,6 @@ body {
 
 a:hover {
     text-decoration: none;
-}
-
-.nav-container {
-    left: 0; /* and is taken from the CI Bootstrap module walkthrough */
-    padding-left: 0;
-    padding-right: 0;
-    position: sticky;
-    width: 100vw;
-    z-index: 1;
 }
 
 .navbar-toggler {
